--- a/index.html
+++ b/index.html
@@ -212,9 +212,11 @@
                     <div class="colored-line-left">
                     </div>
                     <p class="text-left">
-      If you have a questions, would like to order any of our syrups, or just fancy saying hello, then feel free to drop us a line at hello@splendidsyrups.com.</p>
+      If you have a question, would like to order any of our syrups, or just fancy saying hello, then feel free to drop us a line at <a href="mailto:hello@splendidsirups.com">hello@splendidsirups.com</a></p>
       <p>
       Have a great day.
+      </p>
+    <p>
       The Splendid Team.
                     </p>
                     
