change header + text

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <!-- WELCOM MESSAGE -->
                             <img src="images/logo.png" />
 <!--                             <h1 class="intro white-text">Splendid Sirups</h1>
- -->                            <h5 class="white-text">Thank you for taking the time to visit us at Splendid Syrups</h5>
+ -->                            <!--  h5 class="">For that little bit extra</h5 -->
                             
 
                             <!-- /END BUTTON -->
@@ -142,7 +142,7 @@
 <!--                         <div class="service-icon colored-text">
                             <span class="icon-basic-webpage-multiple"></span>
                         </div> -->
-                        <h3 class="colored-text">Christmas Cosy</h3>
+                        <h3 class="colored-text">Christmas <br />Cosy</h3>
 <!--                         <p>
                             Accelerator photo sharing business school drop out ramen hustle crush it revenue traction platforms.
                         </p> -->
@@ -155,7 +155,7 @@
 <!--                         <div class="service-icon colored-text">
                             <span class="icon-ecommerce-graph3"></span>
                         </div> -->
-                        <h3 class="colored-text">Luscious Lemon</h3>
+                        <h3 class="colored-text">Luscious <br />Lemon</h3>
 <!--                         <p>
                             Coworking viral landing page user base minimum viable product hackathon API mashup FB Connect.
                         </p> -->
@@ -167,7 +167,7 @@
 <!--                         <div class="service-icon colored-text">
                             <span class="icon-ecommerce-graph3"></span>
                         </div> -->
-                        <h3 class="colored-text">Very Vanilla</h3>
+                        <h3 class="colored-text">Very <br />Vanilla</h3>
 <!--                         <p>
                             Coworking viral landing page user base minimum viable product hackathon API mashup FB Connect.
                         </p> -->
@@ -180,7 +180,7 @@
 <!--                         <div class="service-icon colored-text">
                             <span class="icon-basic-geolocalize-05"></span>
                         </div> -->
-                        <h3 class="colored-text">Sweet Cinnamon</h3>
+                        <h3 class="colored-text">Sweet <br />Cinnamon</h3>
 <!--                         <p>
                             Social bookmarking group buying crowded market pivot onboarding freemium prototype ping.
                         </p> -->
